# OpenGL-Breakout

./: BallObject.cpp  BallObject.hpp  CMakeLists.txt  Game.cpp  Game.hpp  GameLevel.cpp  GameLevel.hpp  GameObject.cpp  GameObject.hpp  README.md  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  Texture.cpp  Texture.hpp  a.out  main.cpp
include/glad/: gl.h
src/: gl.c
